Fixed overflow issues with large buttons in sidebar

--- a/MeTal/static/css/custom.css
+++ b/MeTal/static/css/custom.css
@@ -149,3 +149,7 @@ body {
     border: 1px rgb(204,204,204) solid;
     height: auto;
 }
+.panel-body {
+	overflow: hidden
+}
+}
